@startuml
!theme toy

entity "Produto" {
    * id: Long
    --
    nome: String
    descricao: String
    preco: Double
    estoque: int
    ativo: boolean
    dataCriacao: Date
    dataModificacao: Date
    --
    criarProduto()
    atualizarProduto()
    ativarProduto()
    desativarProduto()
    buscarProduto()
    buscarTodosProdutos()
    buscarProdutosAtivos()
    buscarProdutosInativos()
}

entity "Venda" {
    * id: Long
    --
    data: Date
    total: Double
    --
    adicionarVenda()
    verVenda()
    atualizarVenda()
    excluirVenda()
    relatorioVenda()
}

entity "VendaProduto" {
    * vendaId: Long
    * produtoId: Long
    --
    quantidade: int
}

entity "User" {
    * id: String
    --
    name: String
    email: String
    password: String
    roles: List<String>
    tempToken: TempToken
    --
    register()
    login()
    resetPassword()
    newPassword()
}

entity "TempToken" {
    * id: Long
    --
    token: String
}

' Relacionamentos existentes
Produto ||--o{ VendaProduto: contém
Venda ||--o{ VendaProduto: contém
User ||--o{ TempToken: usa

' Anotações para explicar o uso de TempToken
User --> TempToken : "gera um token\n temporário para\n resetPassword()"

@enduml
